<resources>
    <string name="app_name">NegroBP</string>
    <string name="login">Logowanie</string>
    <string name="login_button">Zaloguj się</string>
    <string name="blik_code">%1$s</string>
    <string name="blik_butoon">Skopiuj do schowka</string>
    <string name="blik_progress_timer">%1$d:%2$02d</string>
    <string name="blik_requester">%1$s</string>
    <string name="button_reject">Odrzuć</string>
    <string name="button_accept">Potwierdź</string>
</resources>