<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlikConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/requester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blik_requester"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reject"/>
            <Button
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_accept"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>